Fix fieldset borders not aligning

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,3 +33,7 @@ body {
     height: 47vh;
     max-height: 47vh;
 }
+
+legend {
+    height: 1.5rem;
+}
